<resources>
    <string name="app_name">LoadingButton</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id">loading_channel</string>
    <string name="notification_channel_name">loading</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="image_download">Image Download</string>

    <string name="glide">Glide-Image Loading Library by BumpTech</string>
    <string name="loadapp">LoadApp-Current repository by Udacity</string>
    <string name="retrofit">Retrofit-Type-safe HTTP client for Android and Java by Square, Inc</string>


    <string name="file_status">File Status:</string>
    <string name="no_found_text">not found</string>
    <string name="successful">SUCCESSFUL</string>
    <string name="running">RUNNING</string>
    <string name="pending">PENDING</string>
    <string name="paused">PAUSED</string>
    <string name="failed">FAILED</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="button">Button</string>
    <string name="we_are_loading">We Are Loading</string>
    <string name="download">Download</string>
</resources>